--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ serde_json = "0.8"
 serde_derive = "0.8"
 
 [build-dependencies]
-schemafy = { git = "https://github.com/Marwes/schemafy" }
+schemafy = "0.1.1"
