--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Markus Westerlind <marwes91@gmail.com>"]
 build = "build.rs"
 
 description = "Type definitions for Visual Code's debug server."
+readme = "README.md"
 
 license = "MIT"
 
