--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 name = "debugserver-types"
 version = "0.4.0"
 authors = ["Markus Westerlind <marwes91@gmail.com>"]
-
-build = "build.rs"
+edition = "2018"
 
 description = "Type definitions for Visual Code's debug server."
 readme = "README.md"
@@ -17,9 +16,6 @@ documentation = "https://docs.rs/debugserver-types"
 path = "src/lib.rs"
 
 [dependencies]
-serde = "1.0"
+schemafy = "0.5.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_derive = "1.0"
-
-[build-dependencies]
-schemafy = "0.3.0"
